--- a/flutter_stack_api/pubspec.yaml
+++ b/flutter_stack_api/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   google_fonts: ^1.1.0
   http:
   shared_preferences:
+  image_picker: ^0.6.7+2
+  http_parser:
   #state management:
   stacked: ^1.2.2
   #navigation:
