Admin Panel Products Completed with CRUD NODE JS

--- a/flutter_stack_api/pubspec.yaml
+++ b/flutter_stack_api/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   #isolate package:
   flutter_isolate: ^1.0.0+14
   flutter_startup: ^0.0.2
+  flutter_absolute_path: ^1.0.6
 #  flutter_absolute_path: ^1.0.6
 #  path_provider: ^1.6.11
   path_provider:
