permission run time added flutter

--- a/flutter_stack_api/pubspec.yaml
+++ b/flutter_stack_api/pubspec.yaml
@@ -33,10 +33,11 @@ dependencies:
   shared_preferences:
   image_picker: ^0.6.7+2
   http_parser:
+  permission_handler:
   #isolate package:
   flutter_isolate: ^1.0.0+14
   flutter_startup: ^0.0.2
-  flutter_absolute_path: ^1.0.6
+
 #  flutter_absolute_path: ^1.0.6
 #  path_provider: ^1.6.11
   path_provider:
