--- a/flutter_ecommerce_user_app/pubspec.yaml
+++ b/flutter_ecommerce_user_app/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   image_picker: ^0.6.7+2
   http_parser:
   permission_handler:
+  device_preview: ^0.4.5
   path_provider:
     #statemanagement
   stacked: ^1.2.2
@@ -43,6 +44,7 @@ dependencies:
   get_it:
   injectable:
   introduction_screen: ^1.0.9
+  intl:
 
 
 dev_dependencies:
